--- a/app/views/local_stations/index.html.erb
+++ b/app/views/local_stations/index.html.erb
@@ -3,7 +3,7 @@
   <meta name='stations' content='<%= @stations.html_safe %>' />
 <% end %>
 
-<h1>Stations Map</h1>  
+<h1 class="text-3xl font-bold">Stations Map</h1>  
   
 <div id="app">  
   <stations-map></stations-map>  
